# vendor_oh_fun

./: README.en.md  README.md
bearpi-hm_nano-oh_flower/00_代码/bearpi-hm_nano_oh_fun/test/xts/acts/build_lite/: BUILD.gn
bearpi-hm_nano-oh_flower/00_代码/bearpi-hm_nano_oh_fun/test/xts/acts/graphic_lite/: BUILD.gn
bearpi-hm_nano-oh_flower/00_代码/bearpi-hm_nano_oh_fun/test/xts/acts/graphic_lite/events_posix/src/: press_event_test.cpp
bearpi-hm_nano-oh_flower/00_代码/bearpi-hm_nano_oh_fun/test/xts/acts/graphic_lite/gridlayout_posix/src/: test_grid_layout.cpp
bearpi-hm_nano-oh_flower/00_代码/bearpi-hm_nano_oh_fun/test/xts/acts/graphic_lite/theme_posix/src/: theme_manager_test.cpp
bearpi-hm_nano-oh_flower/00_代码/bearpi-hm_nano_oh_fun/test/xts/acts/graphic_lite/ui_arc_lable_posix/src/: ui_arc_label_test.cpp
bearpi-hm_nano-oh_flower/00_代码/bearpi-hm_nano_oh_fun/test/xts/acts/graphic_lite/ui_swipe_view_posix/src/: ui_swipe_view_test.cpp
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/base/powermgr/powermgr_lite/services/: BUILD.gn
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/base/powermgr/powermgr_lite/services/include/: power_manage_service.h
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/base/powermgr/powermgr_lite/services/source/: power_manage_feature.cpp
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/base/sensors/sensor_lite/frameworks/src/: BUILD.gn  sensor_agent_proxy.c
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/base/sensors/sensor_lite/services/: BUILD.gn
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/base/sensors/sensor_lite/services/include/: sensor_service.h
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/base/sensors/sensor_lite/services/src/: proc.c  sensor_service.c  sensor_service_impl.c
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/developtools/packing_tool/: BUILD.gn
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/developtools/packing_tool/bundles/packing_tool/: readme.md
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/developtools/packing_tool/com/huawei/ohos/: ApiVersion.java  AppInfo.java  BundleException.java  CommandParser.java  CompressVerify.java  Compressor.java  CountryCode.java  CustomizeData.java  DefPermission.java  DeviceConfig.java  FormInfo.java  HapZipInfo.java  IntentInfo.java  JsInfo.java  README  ReqPermission.java  ResourcesParser.java  ScreenDensity.java  ScreenShape.java  ScreenWindow.java  ShowHelp.java  UncomperssResult.java  Uncompress.java  UncompressEntrance.java  UsedScene.java  Utility.java
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/device/hisilicon/hardware/multimedia/: BUILD.gn
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/device/hisilicon/modules/middleware/: BUILD.gn
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/device/hisilicon/modules/middleware/source/: build.sh  build_another.sh
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/drivers/peripheral/display/hal/: BUILD.gn  disp_common.h
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/drivers/peripheral/display/hal/default/: display_gralloc.c
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/drivers/peripheral/input/hal/: BUILD.gn
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/drivers/peripheral/input/hal/include/: input_common.h
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/drivers/peripheral/input/hal/src/: input_controller.c
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/foundation/ace/ace_engine_lite/test/: BUILD.gn  ace_test_config.gni
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/foundation/ace/ace_engine_lite/test/moduletest/common/: basic_tdd_test.cpp  basic_tdd_test.h
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/foundation/graphic/ui/test/unittest/: BUILD.gn
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/foundation/graphic/ui/test/unittest/animator/: animator_unit_test.cpp  interpolation_unit_test.cpp
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/foundation/multimedia/audio_lite/frameworks/: BUILD.gn  audio_capturer_impl.h
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/foundation/multimedia/audio_lite/frameworks/audio_source/: audio_source.cpp
hihope_neptune-oh_hid/00_src/Neptune-HarmonyOS-IOT/test/developertest/examples/string_utils/: BUILD.gn
hihope_neptune-oh_hid/00_src/v0.1/applications/sample/camera/screensaver/: BUILD.gn  README_zh.md
hihope_neptune-oh_hid/00_src/v0.1/applications/sample/camera/screensaver/cert/: com.huawei.screensaver_HarmonyAppProvision_release.p7b
hihope_neptune-oh_hid/00_src/v0.1/device/hisilicon/hardware/: BUILD.gn  README_zh.md  build.sh
hihope_neptune-oh_hid/00_src/v0.1/device/hisilicon/hardware/display/libs/: BUILD.gn
hihope_neptune-oh_hid/00_src/v0.1/device/hisilicon/hardware/update/: BUILD.gn
hihope_neptune-oh_hid/00_src/v0.1/device/winnermicro/neptune/sdk_liteos/: Makefile  config.gni  ohos_build.sh
hihope_neptune-oh_hid/00_src/v0.1/device/winnermicro/neptune/sdk_liteos/demo/: wm_connect_net_demo.c
hihope_neptune-oh_hid/00_src/v0.1/device/winnermicro/neptune/sdk_liteos/doc/: w800_apis.chm
hihope_neptune-oh_hid/00_src/v0.1/device/winnermicro/neptune/sdk_liteos/include/: wm_wifi_api.h
hihope_neptune-oh_hid/00_src/v0.1/drivers/peripheral/sensor/hal/: BUILD.gn
hihope_neptune-oh_hid/00_src/v0.1/drivers/peripheral/sensor/hal/include/: sensor_core.h
hihope_neptune-oh_hid/00_src/v0.1/drivers/peripheral/sensor/hal/src/: sensor_channel.c  sensor_core.c  sensor_manager.c
hihope_neptune-oh_hid/00_src/v0.1/drivers/peripheral/wlan/client/: BUILD.gn
hihope_neptune-oh_hid/00_src/v0.1/drivers/peripheral/wlan/client/include/: wifi_common_cmd.h  wifi_driver_client.h
hihope_neptune-oh_hid/00_src/v0.1/foundation/graphic/utils/test/: BUILD.gn
hihope_neptune-oh_hid/00_src/v0.1/foundation/multimedia/camera_lite/frameworks/: BUILD.gn  camera_config.cpp  camera_device.h  camera_impl.cpp  camera_impl.h  camera_kit.cpp  camera_service.cpp  camera_service.h  camera_service_callback.h  event_handler.cpp
hihope_neptune-oh_hid/00_src/v0.1/test/developertest/aw/java/distributed/: BUILD.gn
(+1473 files in other folders)
