# Copyright (c) Huawei Technologies Co., Ltd. 2019-2019. All rights reserved.

import("//build/config/ohos/rules.gni")
import("//build/ohos.gni")
import("//developtools/developtools.gni")

java_library("hmos_app_packing_tool_java") {
  java_files = [
    "com/huawei/ohos/BundleException.java",
    "com/huawei/ohos/CommandParser.java",
    "com/huawei/ohos/CompressEntrance.java",
    "com/huawei/ohos/Compressor.java",
    "com/huawei/ohos/CompressVerify.java",
    "com/huawei/ohos/Log.java",
    "com/huawei/ohos/ShowHelp.java",
    "com/huawei/ohos/Utility.java",
  ]

  main_class = "com.huawei.ohos.CompressEntrance"

  final_jar_path = "$root_build_dir/developtools/hmos_app_packing_tool.jar"
}

java_library("hmos_app_unpacking_tool_java") {
  java_files = [
    "com/huawei/ohos/BundleException.java",
    "com/huawei/ohos/CommandParser.java",
    "com/huawei/ohos/Log.java",
    "com/huawei/ohos/ShowHelp.java",
    "com/huawei/ohos/UncompressEntrance.java",
    "com/huawei/ohos/Uncompress.java",
    "com/huawei/ohos/UncompressVerify.java",
    "com/huawei/ohos/Utility.java",
    "com/huawei/ohos/HapInfo.java",
    "com/huawei/ohos/ReqPermission.java",
    "com/huawei/ohos/Distro.java",
    "com/huawei/ohos/AbilityInfo.java",
    "com/huawei/ohos/MetaData.java",
    "com/huawei/ohos/MetaDataInfo.java",
    "com/huawei/ohos/SkillInfo.java",
    "com/huawei/ohos/UsedScene.java",
    "com/huawei/ohos/PackInfo.java",
    "com/huawei/ohos/FormInfo.java",
    "com/huawei/ohos/ProfileInfo.java",
    "com/huawei/ohos/AppInfo.java",
    "com/huawei/ohos/DefPermission.java",
    "com/huawei/ohos/DefPermissionGroup.java",
    "com/huawei/ohos/CustomizeData.java",
    "com/huawei/ohos/UncomperssResult.java",
    "com/huawei/ohos/JsonUtil.java",
    "com/huawei/ohos/JsInfo.java",
    "com/huawei/ohos/DeviceConfig.java",
    "com/huawei/ohos/CommonEvent.java",
    "com/huawei/ohos/Shortcut.java",
    "com/huawei/ohos/IntentInfo.java",
    "com/huawei/ohos/ResourcesParser.java",
    "com/huawei/ohos/DistroFilter.java",
    "com/huawei/ohos/ApiVersion.java",
    "com/huawei/ohos/ScreenShape.java",
    "com/huawei/ohos/ScreenDensity.java",
    "com/huawei/ohos/ScreenWindow.java",
    "com/huawei/ohos/CountryCode.java",
    "com/huawei/ohos/HapZipInfo.java",
  ]

  deps = [ "//third_party/fastjson/repackaged:fastjson_utils_java" ]

  java_manifest_file = "META-INF/unpacking_tool/MANIFEST.MF"

  main_class = "com.huawei.ohos.UncompressEntrance"

  final_jar_path = "$root_build_dir/developtools/hmos_app_unpacking_tool.jar"
}

java_library("hmos_haptobin_tool_java") {
  java_files = [
    "com/huawei/ohos/Log.java",
    "com/huawei/ohos/BinaryTool.java",
    "com/huawei/ohos/FileUtils.java",
    "com/huawei/ohos/ConvertHapToBin.java",
  ]

  deps = [ "//third_party/fastjson/repackaged:fastjson_utils_java" ]

  java_manifest_file = "META-INF/packingbin_tool/MANIFEST.MF"

  main_class = "com.huawei.ohos.ConvertHapToBin"

  final_jar_path = "$root_build_dir/developtools/hmos_haptobin_tool.jar"
}

java_library("hmos_bininfo_collecting_tool_java") {
  java_files = [
    "com/huawei/ohos/Log.java",
    "com/huawei/ohos/FileUtils.java",
    "com/huawei/ohos/CollectBinInfo.java",
  ]

  deps = [ "//third_party/fastjson/repackaged:fastjson_utils_java" ]

  java_manifest_file = "META-INF/collectingbininfo_tool/MANIFEST.MF"

  main_class = "com.huawei.ohos.CollectBinInfo"

  final_jar_path =
      "$root_build_dir/developtools/hmos_bininfo_collecting_tool.jar"
}

group("packing_tool_target") {
  deps = [
    ":hmos_app_packing_tool_java",
    ":hmos_app_unpacking_tool_java",
    ":hmos_bininfo_collecting_tool_java",
    ":hmos_haptobin_tool_java",
  ]
}
