# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/subsystem/aafwk/config.gni")
import("//test/xts/tools/lite/build/suite_lite.gni")

lite_component("acts_component") {
  all_features = []
  features = []
  if (ohos_xts_test_args != "") {
    args = [
      "--method_name",
      "get_target_modules",
      "--arguments",
      "all_features=${ohos_xts_test_args}",
    ]
    all_features +=
        exec_script(rebase_path("//test/xts/tools/lite/build/utils.py"),
                    args,
                    "list lines")
  } else {
    if (ohos_kernel_type == "liteos_m") {
      all_features += [
        "//test/xts/acts/communication_lite/lwip_hal:ActsLwipTest",
        "//test/xts/acts/communication_lite/softbus_hal:ActsSoftBusTest",
        "//test/xts/acts/communication_lite/wifiservice_hal:ActsWifiServiceTest",
        "//test/xts/acts/utils_lite/utilsfile_hal:ActsUtilsFileTest",
        "//test/xts/acts/utils_lite/parameter_hal:ActsParameterTest",
        "//test/xts/acts/iot_hardware_lite/wifiiot_hal:ActsWifiIotTest",
        "//test/xts/acts/kernel_lite/kernelcmsis_hal:ActsCMSISTest",
        "//test/xts/acts/utils_lite/kvstore_hal:ActsKvStoreTest",
        "//test/xts/acts/security_lite/datahuks_hal:ActsSecurityDataTest",

        "//test/xts/acts/distributed_schedule_lite/samgr_hal:ActsSamgrTest",
        "//test/xts/acts/update_lite/updater_hal:ActsUpdaterFuncTest",
        "//test/xts/acts/startup_lite/bootstrap_hal:ActsBootstrapTest",
      ]
    } else if (ohos_kernel_type == "liteos_a") {
      all_features += [
        "//test/xts/acts/kernel_lite:ActsKernelTest",
        "//test/xts/acts/security_lite:securitytest",
        "//test/xts/acts/utils_lite/kvstore_posix:ActsKvStoreTest",
        "//test/xts/acts/startup_lite/parameter_posix:ActsParameterTest",
        "//test/xts/acts/startup_lite/bootstrap_posix:ActsBootstrapTest",
        "//test/xts/acts/multimedia_lite/multimedia_posix/camera:ActsMediaCameraTest",
        "//test/xts/acts/open_posix_testsuite/conformance/interfaces:ActsOpenPosixTest",
        "//test/xts/acts/multimedia_lite/multimedia_posix/player:ActsMediaPlayerTest",
        "//test/xts/acts/distributed_schedule_lite/samgr_posix:ActsSamgrTest",

        #"//test/xts/acts/distributedschedule_lite/dtbschedmgr_posix:ActsDMSTest",
        "//test/xts/acts/security_lite/permission_posix/pms:ActsPMSTest",
        "//test/xts/acts/multimedia_lite/multimedia_posix/recorder:ActsMediaRecorderTest",

        "//test/xts/acts/graphic_lite/graphic_utils:uikit_test1",
        "//test/xts/acts/graphic_lite/surface:uikit_test2",
        "//test/xts/acts/graphic_lite/ui:uikit_test3",
        "//test/xts/acts/appexecfwk_lite/bundlems_posix:ActsBundleMgrTest",
        "//test/xts/acts/appexecfwk_lite/abilityms_posix:ActsAbilityMgrTest",
        "//test/xts/acts/communication_lite/softbus_posix:ActsSoftBusTest",
        "//test/xts/acts/communication_lite/lwip_posix:ActsLwipTest",

        "//test/xts/acts/ai_lite:ActsAiTest",
        "//test/xts/acts/global_lite:ActsGlobalTest",
        "//test/xts/acts/sensors_lite:sensorstest",
      ]
    } else if (ohos_kernel_type == "linux") {
      all_features += [
        "//test/xts/acts/utils_lite/kvstore_posix:ActsKvStoreTest",
        "//test/xts/acts/startup_lite/parameter_posix:ActsParameterTest",
        "//test/xts/acts/security_lite/datahuks_posix:ActsSecurityDataTest",
        "//test/xts/acts/multimedia_lite/multimedia_posix/camera:ActsMediaCameraTest",
        "//test/xts/acts/multimedia_lite/multimedia_posix/recorder:ActsMediaRecorderTest",
        "//test/xts/acts/multimedia_lite/multimedia_posix/player:ActsMediaPlayerTest",
        "//test/xts/acts/distributed_schedule_lite/samgr_posix:ActsSamgrTest",
        "//test/xts/acts/appexecfwk_lite/bundlems_posix:ActsBundleMgrTest",
        "//test/xts/acts/appexecfwk_lite/abilityms_posix:ActsAbilityMgrTest",
      ]
    }
  }

  if (ohos_build_type == "debug") {
    _all_features = ""
    _product_json = rebase_path("${product_path}/config.json")
    foreach(one_feature, all_features) {
      _all_features = _all_features + one_feature + ","
    }
    _args = [
      "--method_name",
      "filter_by_subsystem",
      "--arguments",
      "testsuites=${_all_features}#product_json=${_product_json}",
    ]
    features += exec_script(rebase_path("//test/xts/tools/lite/build/utils.py"),
                            _args,
                            "list lines")
  }
}

test_suite("acts") {
  deps = [ ":acts_component" ]
  version = "OpenHarmony-ACTS-2.1.1.001"
  if (ohos_kernel_type == "liteos_a") {
    deps += [ "//test/xts/tools/lite/others/query:query" ]
    copy("query_copy") {
      sources = [ "$root_out_dir/bin/query.bin" ]
      outputs = [ "$root_out_dir/suites/acts/resource/tools/query.bin" ]
    }
  }
}

generate_notice_file("acts_notice_file") {
  module_name = "acts"
  module_source_dir_list = [
    "//third_party/googletest",
    "//third_party/unity",
    "//third_party/bounds_checking_function",
    "//third_party/iniparser",
  ]
}
