# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

executable("sensor_service") {
  sources = [
    "./src/proc.c",
    "./src/sensor_service.c",
    "./src/sensor_service_impl.c",
  ]
  ldflags = [ "-Wl,-Map=provider_proc.map" ]

  include_dirs = [
    "./include",
    "//third_party/bounds_checking_function/include",
    "//kernel/liteos_a/kernel/include",
    "//kernel/liteos_a/kernel/common",
    "//utils/native/lite/include",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/registry",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/samgr",
    "//foundation/distributedschedule/samgr_lite/interfaces/kits/communication/broadcast",
    "//foundation/distributedschedule/samgr_lite/samgr/source",
    "//foundation/communication/ipc_lite/frameworks/liteipc/include",
    "//foundation/communication/ipc_lite/interfaces/kits",
    "//drivers/peripheral/sensor/interfaces/include",
    "//base/sensors/sensor_lite/frameworks/include",
  ]

  deps = [
    "//drivers/peripheral/sensor/hal:hdi_sensor",
    "//foundation/distributedschedule/samgr_lite/samgr:samgr",
  ]
}
