# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/aafwk/path.gni")
import("//build/lite/ndk/ndk.gni")

if (ohos_build_compiler == "clang") {
  copy("hdi_media") {
    sources = [ "hal/hdi_media/${board_name}/llvm/ohos/libs/libhdi_media.so" ]
    outputs = [ "$root_out_dir/libhdi_media.so" ]
  }
}

if (ohos_build_compiler == "gcc") {
  copy("hdi_media") {
    sources = [ "hal/hdi_media/${board_name}/gcc/ohos/libs/libhdi_media.so" ]
    outputs = [ "$root_out_dir/libhdi_media.so" ]
  }
}

group("libhdi_media") {
  deps = [ ":hdi_media" ]
  if ((board_name == "hi3516dv300" || board_name == "hispark_taurus") &&
      ohos_kernel_type == "liteos_a") {
    deps += [ "//device/hisilicon/build/hi3516dv300:hi3516dv300_image" ]
  } else if (board_name == "hispark_taurus" && ohos_kernel_type == "linux") {
    deps += [ "//vendor/hisi/camera/dvkit_product/linux/hi3516dv300/Hi3516CV500_SDK_V2.0.3.0:linux_kernel" ]
  } else if (board_name == "hi3516dv300" && ohos_kernel_type == "linux") {
    deps += [ "//vendor/hisi/camera/dvkit_product/linux/hi3516dv300/Hi3516CV500_SDK_V2.0.2.0:linux_kernel" ]
  } else if ((board_name == "hi3518ev300" || board_name == "hispark_aries") &&
             ohos_kernel_type == "liteos_a") {
    deps += [ "//device/hisilicon/build/hi3518ev300:hi3518ev300_make_kernel" ]
  } else if ((board_name == "hi3518ev300" || board_name == "hispark_aries") &&
             ohos_kernel_type == "linux") {
    deps += [ "//vendor/hisi/camera/dvkit_product/linux/hi3518ev300/Hi3516EV200_SDK_V1.0.1.2_LINUX:linux_kernel" ]
  } else if (board_name == "aegis_hi3516dv300" &&
             ohos_kernel_type == "liteos_a") {
    deps +=
        [ "//device/hisilicon/aegis_hi3516dv300/build:aegis_hi3516dv300_image" ]
  }
}
