# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

HDF_FWKS = "//drivers/framework"

shared_library("hdi_input") {
  sources = [
    "src/input_controller.c",
    "src/input_manager.c",
    "src/input_reporter.c",
  ]

  include_dirs = [
    "include",
    "//drivers/peripheral/input/interfaces/include",
    "//drivers/adapter/uhdf/posix/include",
    "$HDF_FWKS/include/utils",
    "$HDF_FWKS/include/osal",
    "$HDF_FWKS/core/adapter/syscall/include",
    "$HDF_FWKS/include/core",
    "$HDF_FWKS/ability/sbuf/include",
    "$HDF_FWKS/core/shared/include",
    "$HDF_FWKS/utils/include",
    "//third_party/bounds_checking_function/include",
  ]

  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//drivers/adapter/uhdf/manager:hdf_core",
    "//drivers/adapter/uhdf/posix:hdf_posix_osal",
    "//third_party/bounds_checking_function:libsec_shared",
  ]

  defines = [ "__USER__" ]

  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
  ]
}

lite_component("hdi") {
  features = [ ":hdi_input" ]
}
