#Copyright (c) 2021 Huawei Device Co., Ltd.
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.

import("//build/lite/config/test.gni")

ace_lite_root = "//foundation/ace/ace_engine_lite"
ace_lite_builtin_root =
    "//foundation/ace/ace_engine_lite/interfaces/innerkits/builtin"
graphic_ui_root = "//foundation/graphic/ui"
test_output_root = "$root_out_dir/test/unittest/jsfwk"

ace_test_includes = [
  "${aafwk_lite_path}/interfaces/kits/ability_lite",
  "${aafwk_lite_path}/interfaces/kits/want_lite",
  "${aafwk_lite_path}/interfaces/innerkits/abilitymgr_lite",
  "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
  "${appexecfwk_lite_path}/utils/bundle_lite",
  "$graphic_ui_root/frameworks",
  "$graphic_ui_root/interfaces/kits/animator",
  "$graphic_ui_root/interfaces/kits/components",
  "$graphic_ui_root/interfaces/kits/dfx",
  "$graphic_ui_root/interfaces/kits/events",
  "$graphic_ui_root/interfaces/kits/layout",
  "$graphic_ui_root/interfaces/kits/themes",
  "$graphic_ui_root/interfaces/kits/font",
  "//foundation/multimedia/services/media_lite/camera",
  "//foundation/multimedia/services/media_lite/camera/hal",
  "//third_party/bounds_checking_function/include",
  "//third_party/jerryscript/jerry-core/include",
  "//third_party/jerryscript/jerry-ext/include/jerryscript-ext",
  "//third_party/jerryscript/jerry-port/default/include",
  "//third_party/cJSON",
  "//utils/native/lite/include",
  "$ace_lite_builtin_root/async",
  "$ace_lite_builtin_root/base",
  "$ace_lite_builtin_root/jsi",
  "$ace_lite_root/frameworks/include/context",
  "$ace_lite_root/frameworks/src/core",
  "$ace_lite_root/frameworks/src/core/animation",
  "$ace_lite_root/frameworks/src/core/base",
  "$ace_lite_root/frameworks/src/core/base/cache",
  "$ace_lite_root/frameworks/src/core/components",
  "$ace_lite_root/frameworks/src/core/components/test/unittest/common",
  "$ace_lite_root/frameworks/src/core/context",
  "$ace_lite_root/frameworks/src/core/directive",
  "$ace_lite_root/frameworks/src/core/router",
  "$ace_lite_root/frameworks/src/core/jsi",
  "$ace_lite_root/frameworks/src/core/modules",
  "$ace_lite_root/frameworks/src/core/router",
  "$ace_lite_root/frameworks/src/core/stylemgr",
  "$ace_lite_root/frameworks/src/core/wrapper",
  "$ace_lite_root/test/moduletest/common",
]

ace_test_configs = [ "$ace_lite_root/frameworks:ace_lite_config" ]

ace_test_defines = [
  "TDD_ASSERTIONS",
  "__LITEOS__",
]

ace_test_deps = [
  "${aafwk_lite_path}/frameworks/ability_lite:aafwk_abilitykit_lite",
  "${appexecfwk_lite_path}/frameworks/bundle_lite:bundle",
  "//foundation/ace/ace_engine_lite/frameworks:ace_lite",
  "//foundation/communication/ipc_lite:liteipc_adapter",
  "//foundation/distributedschedule/samgr_lite/communication/broadcast",
  "//foundation/distributedschedule/samgr_lite/samgr:samgr",
  "//foundation/distributedschedule/samgr_lite/samgr_client:client",
  "//foundation/graphic/surface",
  "//foundation/graphic/ui:lite_ui",
  "//foundation/graphic/utils:lite_graphic_utils",
  "//foundation/graphic/wms:lite_wms",
  "//utils/native/lite/js/builtin:ace_utils_kits",
  "//utils/native/lite/kv_store/src:utils_kv_store",
]
