# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/ohos/rules.gni")

java_library("string_utils_java") {
  java_files = [ "src/com/ohos/utils/StringUtils.java" ]
}

ohos_maple_java("string_utils_maple_java") {
  deps = [ ":string_utils_java" ]
  so_name = "string_utils_maple_java"

  subsystem_name = "subsystem_examples"
}

java_library("string_app_java") {
  java_files = [ "src/com/ohos/app/Application.java" ]

  deps = [ ":string_utils_java" ]
}

ohos_maple_java("string_app_maple_java") {
  deps = [ ":string_app_java" ]
  so_name = "string_app_maple_java"

  subsystem_name = "subsystem_examples"
}
