# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/hap_pack.gni")

shared_library("screensaver") {
  sources = [
    "screensaver/src/main/cpp/screensaver_ability.cpp",
    "screensaver/src/main/cpp/screensaver_ability_slice.cpp",
  ]

  deps = [
    "${aafwk_lite_path}/frameworks/ability_lite:aafwk_abilitykit_lite",
    "${appexecfwk_lite_path}/frameworks/bundle_lite:bundle",
    "//foundation/communication/ipc_lite:liteipc_adapter",
    "//foundation/distributedschedule/samgr_lite/samgr:samgr",
    "//foundation/graphic/surface",
    "//foundation/graphic/ui:lite_ui",
    "//foundation/graphic/utils:lite_graphic_utils",
    "//utils/native/lite/kv_store:kv_store",
  ]

  include_dirs = [
    "screensaver/src/main/cpp",
    "${aafwk_lite_path}/interfaces/kits/ability_lite",
    "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
    "${aafwk_lite_path}/interfaces/kits/want_lite",
    "//base/startup/syspara_lite/interfaces/kits",
  ]

  defines = [
    "ENABLE_WINDOW=1",
    "ABILITY_WINDOW_SUPPORT",
    "OHOS_APPEXECFWK_BMS_BUNDLEMANAGER",
  ]
}

hap_pack("screensaver_hap") {
  deps = [ ":screensaver" ]
  mode = "hap"
  json_path = "screensaver/src/main/config.json"
  ability_so_path = "$root_out_dir/libscreensaver.so"
  force = "true"
  cert_profile = "cert/com.huawei.screensaver_HarmonyAppProvision_release.p7b"
  resources_path = "screensaver/src/main/resources"
  hap_name = "screensaver"
  privatekey = "HOS Application Provision Release"
}
