# Copyright (C) 2020 Hisilicon (Shanghai) Technologies Co., Ltd. All rights reserved.

# Kernel type, e.g. "linux", "liteos_a", "liteos_m".
kernel_type = "liteos_m"

# Kernel version.
kernel_version = ""

# Board CPU type, e.g. "cortex-a7", "riscv32".
board_cpu = "ck804ef"

# Board arch, e.g.  "armv7-a", "rv32imac".
board_arch = ""

# Toolchain name used for system compiling.
# E.g. gcc-arm-none-eabi, arm-linux-harmonyeabi-gcc, ohos-clang,  riscv32-unknown-elf.
# Note: The default toolchain is "ohos-clang". It's not mandatory if you use the default toochain.
board_toolchain = "csky-abiv2-elf"

# The toolchain path instatlled, it's not mandatory if you have added toolchian path to your ~/.bashrc.
board_toolchain_path = ""

# Compiler prefix.
board_toolchain_prefix = "csky-abiv2-elf-"

# Compiler type, "gcc" or "clang".
board_toolchain_type = "gcc"

# Board related common compile flags.
board_cflags = [
  "-falign-functions=2",
  "-std=c99",
  "-Wextra",
  "-Wall",
  "-mhard-float",
  "-mcpu=ck804ef",
  "-Os",
  "-fno-schedule-insns",
  "-Wpointer-arith",
  "-fdata-sections",
]

asmflags = [
  "-mhard-float",
  "-mcpu=ck804ef",
]

board_cxx_flags = board_cflags
board_ld_flags = []

# Board related headfiles search path.
board_include_dirs = [
  "${ohos_root_path}foundation/communication/wifi_lite/interfaces/wifiservice",
  "${ohos_root_path}kernel/liteos_m/components/bounds_checking_function/include",
  "${ohos_root_path}kernel/liteos_m/kal/",
  "${ohos_root_path}kernel/liteos_m/kal/cmsis",
  "${ohos_root_path}kernel/liteos_m/kernel/include",
  "${ohos_root_path}kernel/liteos_m/targets/csky_ck804ef_w800_gcc",
  "${ohos_root_path}kernel/liteos_m/utils/",
  "${ohos_root_path}utils/native/lite/include",
  "${ohos_root_path}third_party/mbedtls/include",
  "${ohos_root_path}kernel/liteos_m/kal/posix/include/",


  #for wifi services
  "${ohos_root_path}device/winnermicro/neptune/sdk_liteos/include",
  "${ohos_root_path}device/winnermicro/neptune/sdk_liteos/include/los",
  "${ohos_root_path}device/winnermicro/neptune/sdk_liteos/include/wifi",
  "${ohos_root_path}device/winnermicro/neptune/sdk_liteos/include/platform",
  "${ohos_root_path}device/winnermicro/neptune/sdk_liteos/include/arch/xt804",
  "${ohos_root_path}device/winnermicro/neptune/sdk_liteos/include/arch/xt804/csi_core",
  "${ohos_root_path}device/winnermicro/neptune/sdk_liteos/include/net",
  "${ohos_root_path}device/winnermicro/neptune/sdk_liteos/include/driver",
  "${ohos_root_path}device/winnermicro/neptune/sdk_liteos/src/network/lwip2.0.3/include",
  "${ohos_root_path}device/winnermicro/neptune/sdk_liteos/include/app",
  "${ohos_root_path}device/winnermicro/neptune/sdk_liteos/include/os",
]

 

# Board adapter dir for OHOS components.
board_adapter_dir =
    "${ohos_root_path}device/winnermicro/neptune/w800_adapter"

# Sysroot path.
board_configed_sysroot = ""

# Board storage type, it used for file system generation.
storage_type = ""
