# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")

FWK_ROOT_DIR = "//drivers/framework"

shared_library("wifi_driver_client") {
  output_name = "wifi_driver_client"
  sources = [ "src/wifi_driver_client.c" ]

  include_dirs = [
    "include",
    "$FWK_ROOT_DIR/include/osal",
    "$FWK_ROOT_DIR/include",
    "$FWK_ROOT_DIR/include/utils",
    "$FWK_ROOT_DIR/core/shared/include",
    "$FWK_ROOT_DIR/ability/sbuf/include",
    "$FWK_ROOT_DIR/include/core",
    "//drivers/adapter/uhdf/posix/include",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
  ]

  deps = [
    "//drivers/adapter/uhdf/posix:hdf_posix_osal",
    "//third_party/bounds_checking_function:libsec_shared",
  ]

  defines = [ "__USER__" ]

  cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
    "-fsigned-char",
    "-fno-common",
    "-fno-strict-aliasing",
    "-Wno-format",
    "-Wno-format-extra-args",
  ]
}

lite_component("hdi_wifi") {
  features = [ ":wifi_driver_client" ]
}
